--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,15 @@
+*{
+    flex-direction: column;
+}
 p{
     color:blue;
     font-size: 50px;
     text-align: center;
+}
+
+.boton{
+    padding: 10px;
+    align-items: center;
+    margin:5%;
+    border-style: solid;
 }
