--- a/estilo.css
+++ b/estilo.css
@@ -1,15 +1,40 @@
-*{
-    flex-direction: column;
+* {
+    box-sizing: border-box;
 }
-p{
-    color:blue;
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    color: rgb(255, 10, 10);
     font-size: 50px;
     text-align: center;
 }
 
-.boton{
+h2 {
+    color: rgb(255, 10, 10);
+    font-size: 20px;
+    text-align: center;
+}
+
+.boton {
+    margin: 20px;
     padding: 10px;
-    align-items: center;
-    margin:5%;
     border-style: solid;
+    border-color: red;
+    text-decoration: none;
+    color: black;
+    transition: 0.4s;
+    font-size: 20px;
+    border-radius: 10px;
+}
+
+.boton:hover{
+    background-color:rgb(240, 171, 171);
+    border-radius: 30px;
+
 }
