--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 * {
-    font-family:'Franklin Gothic Medium';
+    font-family: 'Franklin Gothic Medium';
     box-sizing: border-box;
 }
 
@@ -10,20 +10,16 @@ body {
     justify-content: center;
 }
 
-h1 {
-    color: rgb(255, 10, 10);
-    font-size: 50px;
-    text-align: center;
-}
-
-h2 {
-    color: rgb(255, 10, 10);
-    font-size: 20px;
-    text-align: center;
+#botones {
+    max-width: 400px; /* Puedes ajustar el ancho máximo según tus necesidades */
+    margin: 0 auto;   /* Centra el contenedor horizontalmente */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .boton {
-    margin: 20px;
+    margin: 10px;
     padding: 10px;
     border-style: solid;
     border-color: red;
@@ -34,8 +30,7 @@ h2 {
     border-radius: 10px;
 }
 
-.boton:hover{
-    background-color:rgb(240, 171, 171);
+.boton:hover {
+    background-color: rgb(240, 171, 171);
     border-radius: 30px;
-
 }
