--- a/CarruselFotos/style.css
+++ b/CarruselFotos/style.css
@@ -1,4 +1,7 @@
 
+body{
+    background-color: rgb(196, 255, 230);
+}
 *{
     font-family:'Franklin Gothic Medium';
     text-align: center;
@@ -28,17 +31,23 @@ h1{
 }
 img{
     height: auto;
+    overflow: hidden;
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 30px;
+    border-color:rgb(25, 0, 255);
 }
 
 .boton1{
     position: absolute;
     top: 35%;
+    left: 0.9%
 
 }
 .boton2{
     position: absolute;
     top: 35%;
-    right: 0%;
+    right: 0.9%;
 }
 
 #bot{
