--- a/INDEX/estilo.css
+++ b/INDEX/estilo.css
@@ -1,20 +1,20 @@
-* {
-    font-family: 'Franklin Gothic Medium';
-    box-sizing: border-box;
-}
-
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(199, 255, 197);
+    background-color: rgb(226, 255, 209);
+}
 
+* {
+    font-family: 'Franklin Gothic Medium';
+    box-sizing: border-box;
+    
 }
 
 #botones {
-    max-width: 400px; /* Puedes ajustar el ancho máximo según tus necesidades */
-    margin: 0 auto;   /* Centra el contenedor horizontalmente */
+    max-width: 400px;
+    margin: 0 auto;  
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -36,5 +36,28 @@ body {
 
 .boton:hover {
     background-color: rgb(240, 171, 171);
+    border-radius: 30px;
+}
+
+.oculto{
+    display: none;
+}
+
+.contenedor_carrusel{
+    overflow: hidden;
+}
+
+img{
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 30px;
+    border-color:rgb(25, 0, 255);
+}
+
+.descripcion{
+    font-size: 20px;
+    border-style: solid;
+    padding: 10px;
+    background-color: rgb(250, 250, 207);
     border-radius: 30px;
 }
