--- a/Documentos/INDEX/estilo.css
+++ b/Documentos/INDEX/estilo.css
@@ -3,7 +3,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(226, 255, 209);
+    background-color: rgb(249, 255, 246);
+    background: linear-gradient(90deg, rgba(162,195,34,0.4318102240896359) 0%, rgba(253,187,45,0.2329306722689075) 100%);
 }
 
 * {
