--- a/Documentos/CarruselFotos/style.css
+++ b/Documentos/CarruselFotos/style.css
@@ -1,7 +1,10 @@
+
+body{
+    background-color: rgb(196, 255, 230);
+}
 *{
     font-family:'Franklin Gothic Medium';
     text-align: center;
-
 }
 .contenedor_carrusel{
     
@@ -18,22 +21,33 @@ button{
     font-size: 50px;
 }
 
+p{
+    color:red;
+    font-size: 35px;
+}
+
 h1{
     margin:0;
 }
 img{
     height: auto;
+    overflow: hidden;
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 30px;
+    border-color:rgb(25, 0, 255);
 }
 
 .boton1{
     position: absolute;
     top: 35%;
+    left: 0.9%
 
 }
 .boton2{
     position: absolute;
     top: 35%;
-    right: 0%;
+    right: 0.9%;
 }
 
 #bot{
