--- a/Documentos/INDEX/estilo.css
+++ b/Documentos/INDEX/estilo.css
@@ -10,6 +10,8 @@ body {
 * {
     font-family: 'Franklin Gothic Medium';
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     
 }
 
@@ -61,4 +63,13 @@ img{
     padding: 10px;
     background-color: rgb(250, 250, 207);
     border-radius: 30px;
+    margin: 20px;
+}
+
+h1{
+    margin: 20px;
+}
+
+h2{
+
 }
