--- a/Documentos/INDEX/estilo.css
+++ b/Documentos/INDEX/estilo.css
@@ -1,20 +1,36 @@
 body {
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(249, 255, 246);
-    background: linear-gradient(90deg, rgba(162,195,34,0.4318102240896359) 0%, rgba(253,187,45,0.2329306722689075) 100%);
+    background-color: black;
+    
 }
 
 * {
     font-family: 'Franklin Gothic Medium';
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    padding: 0;  
+    text-decoration: none;
     
 }
+.navbar {
+    background-color: #ffffff;
+    padding: 2px;
+    padding-left: 10px;
+    padding-right: 20px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    color:rgb(0, 0, 0);
+  }
 
+.navbar a{
+    color:rgb(0, 0, 0);
+
+}
+  
 #botones {
     max-width: 400px;
     margin: 0 auto;  
@@ -29,7 +45,7 @@ body {
     border-style: solid;
     border-color: red;
     text-decoration: none;
-    color: black;
+    color: rgb(0, 0, 0);
     transition: 0.4s;
     font-size: 20px;
     border-radius: 10px;
@@ -68,8 +84,10 @@ img{
 
 h1{
     margin: 20px;
+    color:white;
 }
 
 h2{
+    color:white;
 
 }
