--- a/Documentos/CarruselFotos/style.css
+++ b/Documentos/CarruselFotos/style.css
@@ -1,3 +1,24 @@
+.navbar {
+    background-color: #ffffff;
+    padding: 2px;
+    padding-left: 10px;
+    padding-right: 20px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    color:rgb(0, 0, 0);
+    font-family: 'arial';
+    box-sizing: border-box;
+    text-decoration: none;
+  }
+
+.navbar a{
+    color:rgb(0, 0, 0);
+    text-decoration: none;
+    font-family: 'Franklin Gothic Medium';
+
+}
+
 
 body{
     background-color: rgb(196, 255, 230);
