--- a/Documentos/APIValorant/css.css
+++ b/Documentos/APIValorant/css.css
@@ -1,9 +1,3 @@
-*{
-    display: inline-block;
-    text-align: center;
-    font-family: valorant;
-}
-
 body{
     margin: 0;
     padding: 0;
@@ -12,106 +6,60 @@ body{
     background-size:cover;
     background-repeat: no-repeat;
     background-position: center;
-
-}
-.titulo1{
     color:white;
+}
+
+h1{
     font-size: 50px;
-    text-shadow: 0 0 20px red;
-}
+    font-family: Valorant;
+    text-align: center;
+    text-shadow: 0 0 15px red;
 
-.titulo2{
-    color:white;
-    font-size: 15px;
-    text-shadow: 0 0 20px red;
-}
-
-.nombre{
-    color:white;
-    font-size: 25px;
-    text-shadow: 0 0 20px red;
-
-}
-.divpersonaje{
-    border-style: solid;
-    border-color:white;
-    margin: 10px;
-    height: 235px;
-    width: 170px;
-    overflow: hidden;
-    background-color: #00000085;
-    box-shadow: 0 0 15px red;
-    transition: 0.5s;
-}
-
-.divpersonajemovil{
-    transition: 1s;
-}
-
-
-.divpersonaje:hover{
-    box-shadow: 0 0 20px rgb(255, 153, 0);
 
 }
 
-.divfoto{
-    background-position: center;
-    background-size: 190%;
-    width: 100%;
-
-}
-.divfoto img{
-    width:160px;
-}
-.divpersonajeprincipal{
-    display: block;
-}
-
-.divpersonajesecundario{
-    background-color: black;
-    box-shadow: 0 0 50px rgb(136, 255, 0);
-
-}
-.divpersonajesecundario img{
-    scale:200%;
-    opacity: 30%;
-        justify-content: space-around;
-
-}
-
-.oculto{
-    height: 0%;
-}
-
-.visible{
-    height: 100%;
-}
-
-.nombrepersonaje{
-color:rgb(255, 255, 255);
-text-shadow: 2px 0 #000, -2px 0 #000, 0 2px #000, 0 -2px #000,
-1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
-}
-
-.habilidadpersonaje{
-    font-family: 'Segoe UI';
-    font-size: 12px;
-    color:rgb(255, 255, 255);
-
-}
-
-.divhab{
+.div{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
+    margin-top: 100px;
+}
+
+
+
+.divelemento{
+    border-style: solid;
+    margin: 20px;
+    height: 320px;
+    width: 250px;
+    overflow: hidden;
+    align-items: center;
+    box-shadow: 0 0 15px red;
+    background-color: rgb(41, 41, 41);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-position: center center;
+    transition: 1s; 
+}
+
+
+.divelemento:hover{
+
+    scale: 1.1;
 
 
 }
 
+.divelemento h1{    text-align: center;
+    font-family: Calibri;
+    text-shadow: 0 5px 5px rgb(0, 0, 0);
+    
 
-.divhab img{
-    height: 10px;
-    margin: 10px;
-    opacity: 100%;
+}
 
+.armas{
+    background-size:contain;
 }
