--- a/Documentos/APIValorant/Artilugios_belicos/css.css
+++ b/Documentos/APIValorant/Artilugios_belicos/css.css
@@ -1,17 +1,16 @@
 *{
-    text-align: center;
-    font-family: valorant;
-    
+    transition: 0.5s;
+
 }
 
-body{    
-    display: inline-block;
+body{
     margin: 0;
     padding: 0;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(31, 31, 31);
     background-image: url('fondo.png');
-    background-size:contain;
-    background-position:center;
+    background-size:auto;
+    background-position: center;
+    color:white;
 
 }
 
@@ -46,104 +45,103 @@ nav a:last-child {
     padding-right: 20px;
 }
 
-.titulo1{
-    display: inline-block;
-    color:white;
+h1{
+    font-size: 60px;
+    font-family: Valorant;
+    text-align: center;
+    text-shadow: 0 0 15px red;
+}
+
+h2{
+    font-size: 30px;
+    font-family: Valorant;
+    text-align: center;
+}
+
+
+.divcategoria{
+scale: 0.8;
+
+
+}
+.divcajacateogoria{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 10px;
+}
+
+.nombreCategoria{
+    margin-bottom: 10px;
     font-size: 50px;
-    text-shadow: 0 0 20px red;
-}
-
-.nombre{
-    color:white;
-    font-size: 25px;
-    text-shadow: 0 0 20px red;
 
 }
-.divmapa{
-    display: inline-block;
+.nombreArma{
+    margin-bottom: 50px;
+    font-size: 40px;
+}
+.divArma{
     border-style: solid;
     border-color:white;
-    margin: 10px;
-    width: 900px;
-    height: 600px;
+    justify-content: center;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(39, 39, 39, 0.548);
+    margin: 50px;
+    box-shadow: 0 0 40px red;
+}
+
+.divArma:hover{
+    box-shadow: 0 0 40px rgb(255, 153, 0);
+}
+
+.divfotoarma{
+    height: 200px;
     overflow: hidden;
-    background-color: #000000a4;
-    box-shadow: 0 0 15px red;
-    transition: 0.5s;
 }
 
-.divmapamovil{
-    transition: 1s;
+.fotoArma{
+    object-fit:contain;
 }
 
 
-.divmapa:hover{
-    box-shadow: 0 0 20px rgb(255, 153, 0);
-    scale: 1.01;
+
+.datosArma{
+
 
 }
 
-.divfoto{
-    background-size:contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
 
-}
-.divfoto img{
-    height: 600px;
-    width: auto;
-    opacity: 100%;
-}
-.divmapaprincipal{
-    
-    display: block;
-    
-    
+
+.precioArma{
+    font-size: 25px;
 }
 
-.divmapasecundario{
 
-    display: inline-block;
-    background-color: black;
-    box-shadow: 0 0 50px rgb(136, 255, 0);
-    width: 900px;
-    height: 500px;
-    
+.botonesArmaDIV{
+
+    display: flex;
+    flex-direction: row;
+    background-color: rgba(255, 255, 255, 0.11);
 
 }
 
-.oculto{
-    height: 0%;
-}
-
-.visible{
+.botonesArma{
+    width: 100%;
     height: 100%;
-}
-
-.nombremapa{
-color:rgb(255, 255, 255);
-text-shadow: 2px 0 #000, -2px 0 #000, 0 2px #000, 0 -2px #000,
-1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
-transition: 1s;
-}
-
-.descripcionmapa{
-    color:rgb(0, 0, 0);
-    position: absolute;
-    opacity: 1%;
-    transition: 1s;
-    z-index: 1;
-    text-shadow: 0 0 20px rgb(255, 255, 255);
-    margin-left: 20px;
-    margin-right: 20px;
+    object-fit: cover;
+    font-size: 30px;
+    border-style: none;
+    background-color: rgba(255, 255, 255, 0.411);
+    font-family:Valorant;
+    color:white;
 
 
     
+
 }
 
+.botonesArma:hover{
+    color:red;
 
-.blur {
-    filter: blur(0px);
-    transition: 1s;
-  }
-  
+}
