--- a/Documentos/APIValorant/Agentes/css.css
+++ b/Documentos/APIValorant/Agentes/css.css
@@ -62,6 +62,8 @@ nav a:last-child {
     display: inline-block;
     border-style: solid;
     border-color:white;
+    border-width: 1px;
+
     margin: 10px;
     height: 235px;
     width: 170px;
