--- a/Documentos/APIValorant/Artilugios_belicos/css.css
+++ b/Documentos/APIValorant/Artilugios_belicos/css.css
@@ -102,6 +102,8 @@ scale: 0.8;
 
 .fotoArma{
     object-fit:contain;
+    filter: drop-shadow(0 2px 10px rgba(255, 0, 0, 0.671));
+
 }
 
 
@@ -144,4 +146,49 @@ scale: 0.8;
 .botonesArma:hover{
     color:red;
 
+}
+
+
+.divDetalles{
+    border-style: solid;
+    background-color: rgba(61, 61, 61, 0.548);
+    position: fixed;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 20px;
+    font-size: 20px;
+}
+
+.divDetalles h1{
+    font-size: 40px;
+    text-align: center;
+    
+}
+
+.divDetalles img{
+
+filter: drop-shadow(0 2px 10px rgba(62, 162, 255, 0.7))
+}
+
+.cruz{
+    font-size: 50px;
+    float: left;
+    width: 100%;
+    text-align: right;
+
+}
+
+.cruz:hover{
+    color:rgb(255, 184, 184);
+
+}
+
+
+.oculto{
+    display: none;
 }
