--- a/Documentos/INDEX/estilo.css
+++ b/Documentos/INDEX/estilo.css
@@ -4,7 +4,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background: linear-gradient(to top, #aaaaaa, #6d6d6d);
     
 }
 
