--- a/Documentos/APIFutbol/css.css
+++ b/Documentos/APIFutbol/css.css
@@ -18,12 +18,13 @@ button.fa-bars{
     padding: 20px;
     float: left;
     display: fixed;
+    position: absolute;
     
 }
 button.fa-xmark{
     background-color: #ff000000;
     border: none;
-    color:rgb(0, 0, 0);
+    color:rgb(255, 255, 255);
     font-size: 40px;
     padding: 20px;
     float: left;
@@ -35,9 +36,8 @@ button.fa-xmark{
 
 #menu{
     position:absolute;
-    z-index: 5;
     background-color: #ff4b44;
-    width: 200px;
+    width: 170px;
     text-align: center;
     font-size: 20px;
     font-family: Geneva;
@@ -57,7 +57,7 @@ ul {
 ul button{
     background-color: rgba(255, 0, 0, 0);
     border: none;
-    color:rgb(0, 0, 0);
+    color:rgb(255, 255, 255);
     font-size: 25px;
     padding-bottom: 25px;
 }
@@ -69,29 +69,25 @@ ul button{
     background-color: #d62721;
     width: 100%;
     height: 250px;
-    z-index: -5;
 
 }
 
 .portada h1{
-    font-size: 50px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-size: 3vw;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .portada img{
-    width: 500px;
-
-    
+    width: 50vw;
+    max-width: 500px; 
 }
-
 
 .inicio{
     text-align: center;
     align-content: center;
-
 }
 
 .inicio button{
-    font-size: 80px;
+    font-size: 3vw;
     color:#ff4b44;
     border-style: none;
     background-color: rgba(255, 255, 255, 0);
@@ -99,13 +95,14 @@ ul button{
 }
 
 
-.inicioIndividual{
-    border-style: solid;
-    height: 2;
+.inicioIndividual button{
+
+    border-style: none;
+    width: 60%;
     padding: 20px;
     margin:20px;
+    text-align: center;
     background-color: #ffc6c4;
-
 }
 .div1{
     display: flex;
@@ -186,10 +183,15 @@ ul button{
 }
 .DivJugador1 {
     margin: 5px;
+    margin-top:30px;
     text-align: center;
     width: 260px;
     height: 600px;
-    max-height: 600px;
+    max-height: 500px;
+}
+
+.DivJugador1 h1{
+    margin: 5px;
 }
 
 .divFotoJugador{
@@ -204,4 +206,79 @@ ul button{
 
 .oculto{
     display: none;
+}
+
+
+.Equipo{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+}
+.DivEquipo{
+    box-shadow: 0px 0px 10px rgb(255, 0, 0);
+    border-radius: 10px;
+    text-align: center;
+    padding: 20px;
+    margin-bottom: 100px;
+    
+
+}
+
+
+
+.DivEquipo img{
+    width: 20vw;
+    max-width: 150px;
+}
+
+.DivEquipo h1{
+    font-size: 30px;
+    padding: 5px;
+    color:black;
+
+}
+
+
+.divEstadioEquipo{
+    margin-left: auto;
+    margin-right: auto;
+    border-style: solid;
+    font-size: 5px;
+}
+
+.divEstadioEquipo h1{
+
+    font-size: 20px;
+}
+
+.divEstadioEquipo img{
+
+    width: 70vw;
+    max-width: 500px;
+    border-radius: 10px;
+}
+
+
+.divJugadoresEquipo{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.divJugadorEquipo{
+    scale: 0.7;
+    width: 350px;
+    height: 470px;
+    background-color: black;
+    box-shadow: 0px 0px 10px rgb(255, 0, 0);
+    border-radius: 10px;
+
+}
+
+.divJugadorEquipo h1{
+    color:rgb(255, 255, 255);
+}
+.divJugadorEquipo img{
+    width: 10vw;
+    max-width: 130px;
 }
